--- a/index.html
+++ b/index.html
@@ -130,9 +130,8 @@
 
      <h2>New Arrival in Toys</h2> 
 
-     <div class="box-image " >
-
-       <img src="box2.jpg" alt="box2"></img>   
+     <div class="box-image" <img src="box1.jpg" alt="box1"></img>>
+  
 
      </div> 
 
@@ -148,9 +147,9 @@
 
      <h2>Footwear</h2> 
 
-     <div class="box-image ">
+     <div class="box-image <img src="box2.jpg" alt="box2"> </img>">
 
-      <img src="box.1.jpg" alt="box1"></img>
+      
 
      </div> 
 
@@ -166,7 +165,7 @@
 
      <h2>Skin-Care</h2> 
 
-     <div class="box-image " style="background-color: red;"></div> 
+     <div class="box-image " <img src="box3.jpg" alt="box3"></img>></div> 
 
      <p>See more</p> 
 
@@ -180,7 +179,7 @@
 
      <h2>Jewelry</h2> 
 
-     <div class="box-image " style="background-color: pink;"></div> 
+     <div class="box-image " <img src="box4.jpg" alt="box4"></img>></div> 
 
      <p>See more</p> 
 
@@ -194,7 +193,7 @@
 
      <h2>Clothes</h2> 
 
-     <div class="box-image" style="background-color: lightblue;"></div> 
+     <div class="box-image" <img src="box5.jpg" alt="box5"></img>></div> 
 
      <p>See more</p> 
 
@@ -208,7 +207,7 @@
 
      <h2>Kitchen Essentials </h2> 
 
-     <div class="box-image " style="background-color: orange"></div> 
+     <div class="box-image " <img src="box6.jpg" alt="box6"></img>></div> 
 
      <p>See more</p> 
 
@@ -222,7 +221,7 @@
 
      <h2>Electronics</h2> 
 
-     <div class="box-image " style="background-color: yellow;"></div> 
+     <div class="box-image " <img src="box7.jpg" alt="box7"></img>></div> 
 
      <p>See more</p> 
 
