--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
   <div class="hero"> 
 
-    <img src="hero.jpg" alt="hero"> 
+   
 
    <div class="hero-m"> 
 
@@ -128,7 +128,7 @@
 
      <h2>New Arrival in Toys</h2> 
 
-     <div class="box-image" <img src="box1.jpg" alt="box1"></img>>
+     <div class="box-image" <img src="box.jpg" alt="box1"></img>>
   
 
      </div> 
@@ -145,7 +145,7 @@
 
      <h2>Footwear</h2> 
 
-     <div class="box-image <img src="box2.jpg" alt="box2"> </img>">
+     <div class="box-image <img src="box.jpg" alt="box2"> </img>">
 
       
 
@@ -163,7 +163,7 @@
 
      <h2>Skin-Care</h2> 
 
-     <div class="box-image " <img src="box3.jpg" alt="box3"></img>></div> 
+     <div class="box-image " <img src="box.jpg" alt="box3"></img>></div> 
 
      <p>See more</p> 
 
@@ -177,7 +177,7 @@
 
      <h2>Jewelry</h2> 
 
-     <div class="box-image " <img src="box4.jpg" alt="box4"></img>></div> 
+     <div class="box-image " <img src="box.jpg" alt="box4"></img>></div> 
 
      <p>See more</p> 
 
@@ -191,7 +191,7 @@
 
      <h2>Clothes</h2> 
 
-     <div class="box-image" <img src="box5.jpg" alt="box5"></img>></div> 
+     <div class="box-image" <img src="box.jpg" alt="box5"></img>></div> 
 
      <p>See more</p> 
 
@@ -205,7 +205,7 @@
 
      <h2>Kitchen Essentials </h2> 
 
-     <div class="box-image " <img src="box6.jpg" alt="box6"></img>></div> 
+     <div class="box-image " <img src="box.jpg" alt="box6"></img>></div> 
 
      <p>See more</p> 
 
@@ -219,7 +219,7 @@
 
      <h2>Electronics</h2> 
 
-     <div class="box-image " <img src="box7.jpg" alt="box7"></img>></div> 
+     <div class="box-image " <img src="box.jpg" alt="box7"></img>></div> 
 
      <p>See more</p> 
 
