--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="nav-logo border"> 
 
-     <div class="logo">
+     <div class="logo" <img src="logo.png">>
 
      </div> 
 
@@ -128,7 +128,7 @@
 
      <h2>New Arrival in Toys</h2> 
 
-     <div class="box-image" <img src="box.jpg" alt="box1"></img>>
+     <div class="box-image" <img src="box.jpg" alt="box1"> >
   
 
      </div> 
@@ -145,7 +145,7 @@
 
      <h2>Footwear</h2> 
 
-     <div class="box-image <img src="box.jpg" alt="box2"> </img>">
+     <div class="box-image <img src="box.jpg" alt="box2"> >
 
       
 
@@ -163,7 +163,7 @@
 
      <h2>Skin-Care</h2> 
 
-     <div class="box-image " <img src="box.jpg" alt="box3"></img>></div> 
+     <div class="box-image " <img src="box.jpg" alt="box3"></div> 
 
      <p>See more</p> 
 
@@ -177,7 +177,7 @@
 
      <h2>Jewelry</h2> 
 
-     <div class="box-image " <img src="box.jpg" alt="box4"></img>></div> 
+     <div class="box-image " <img src="box.jpg" alt="box4"></div> 
 
      <p>See more</p> 
 
@@ -191,7 +191,7 @@
 
      <h2>Clothes</h2> 
 
-     <div class="box-image" <img src="box.jpg" alt="box5"></img>></div> 
+     <div class="box-image" <img src="box5.jpg" alt="box5"></div> 
 
      <p>See more</p> 
 
@@ -205,7 +205,7 @@
 
      <h2>Kitchen Essentials </h2> 
 
-     <div class="box-image " <img src="box.jpg" alt="box6"></img>></div> 
+     <div class="box-image " <img src="box6.jpg" alt="box6"></div> 
 
      <p>See more</p> 
 
@@ -219,7 +219,7 @@
 
      <h2>Electronics</h2> 
 
-     <div class="box-image " <img src="box.jpg" alt="box7"></img>></div> 
+     <div class="box-image " <img src="box7.jpg" alt="box7"></div> 
 
      <p>See more</p> 
 
