--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
      <h2>New Arrival in Toys</h2> 
 
-     <div class="box-image" <img src="box.jpg" alt="box1"> >
+     <div class="box-image" style="background-image: url ('box1.jpg');">
   
 
      </div> 
@@ -145,7 +145,7 @@
 
      <h2>Footwear</h2> 
 
-     <div class="box-image <img src="box.jpg" alt="box2"> >
+     <div class="box-image" style="background-image: url ('box2.jpg');">
 
       
 
@@ -163,7 +163,7 @@
 
      <h2>Skin-Care</h2> 
 
-     <div class="box-image " <img src="box.jpg" alt="box3"></div> 
+     <div class="box-image " style="background-image: url ('box3.jpg');"></div> 
 
      <p>See more</p> 
 
@@ -177,7 +177,7 @@
 
      <h2>Jewelry</h2> 
 
-     <div class="box-image " <img src="box.jpg" alt="box4"></div> 
+     <div class="box-image " style="background-image: url ('box4.jpg');"></div> 
 
      <p>See more</p> 
 
