--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     <div class="box-content"> 
 
-     <h2>New Arrival in Toys</h2> 
+     <h2> Faishon </h2> 
 
      <div class="box-image" style="background-image: url ('box1.jpg');">
   
@@ -203,7 +203,7 @@
 
     <div class="box-content"> 
 
-     <h2>Kitchen Essentials </h2> 
+     <h2>Kitchen  </h2> 
 
      <div class="box-image " <img src="box6.jpg" alt="box6"></div> 
 
