--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="nav-logo border"> 
 
-     <div class="logo" <img src="logo.png">>
+     <div class="logo" img src="logo.png">
 
      </div> 
 
