--- a/index.html
+++ b/index.html
@@ -123,56 +123,56 @@
   <div class="shop-section">
     <div class="box1 box">
         <div class="box-content">
-            <h2>Health & Personal Care</h2>
+            <h2>Toys</h2>
             <div class="box-img" style="background-image: url('box1.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box2 box">
         <div class="box-content">
-            <h2>Health & Personal Care</h2>
+            <h2>Health Care</h2>
             <div class="box-img" style="background-image: url('box2.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box3 box">
         <div class="box-content">
-            <h2>Health & Personal Care</h2>
+            <h2>Footwear</h2>
             <div class="box-img" style="background-image: url('box3.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box4 box">
         <div class="box-content">
-            <h2>Health & Personal Care</h2>
+            <h2>Skin-Care</h2>
             <div class="box-img" style="background-image: url('box4.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box5 box">
         <div class="box-content">
-            <h2>Health & Personal Care</h2>
+            <h2>Jewelry</h2>
             <div class="box-img" style="background-image: url('box5.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box6 box">
         <div class="box-content">
-            <h2>Health & Personal Care</h2>
+            <h2>Faishon</h2>
             <div class="box-img" style="background-image: url('box6.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box7 box">
         <div class="box-content">
-            <h2>Health & Personal Care</h2>
+            <h2>Electronics</h2>
             <div class="box-img" style="background-image: url('box7.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box8 box">
         <div class="box-content">
-            <h2>Health & Personal Care</h2>
+            <h2>Make-Up</h2>
             <div class="box-img" style="background-image: url('box8.jpg');"></div>
             <p>See more</p>
         </div>
