--- a/index.html
+++ b/index.html
@@ -123,15 +123,15 @@
   <div class="shop-section">
     <div class="box1 box">
         <div class="box-content">
-            <h2>Toys</h2>
+            <h2>Clothes</h2>
             <div class="box-img" style="background-image: url('box1.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box2 box">
         <div class="box-content">
-            <h2>Health Care</h2>
-            <div class="box-img" style="background-image: url('box2.jpg');"></div>
+            <h2>Electronics</h2>
+            <div class="box-img" style="background-image: url('head.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
@@ -145,7 +145,7 @@
     <div class="box4 box">
         <div class="box-content">
             <h2>Skin-Care</h2>
-            <div class="box-img" style="background-image: url('box4.jpg');"></div>
+            <div class="box-img" style="background-image: url('skin.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
@@ -158,8 +158,8 @@
     </div>
     <div class="box6 box">
         <div class="box-content">
-            <h2>Faishon</h2>
-            <div class="box-img" style="background-image: url('box6.jpg');"></div>
+            <h2>Fittnes</h2>
+            <div class="box-img" style="background-image: url('fit.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
