--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </div>
     <div class="box6 box">
         <div class="box-content">
-            <h2>Fittnes</h2>
+            <h2>Fitness</h2>
             <div class="box-img" style="background-image: url('fit.jpg');"></div>
             <p>See more</p>
         </div>
