--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="box4 box">
         <div class="box-content">
             <h2>Skin-Care</h2>
-            <div class="box-img" style="background-image: url('box2.jpg');"></div>
+            <div class="box-img" style="background-image: url('skin.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
