--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="box3 box">
         <div class="box-content">
             <h2>Footwear</h2>
-            <div class="box-img" style="background-image: url('box3.jpg');"></div>
+            <div class="box-img" style="background-image: url('foot.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
@@ -173,7 +173,7 @@
     <div class="box8 box">
         <div class="box-content">
             <h2>Jewelry</h2>
-            <div class="box-img" style="background-image: url('box8.jpg');"></div>
+            <div class="box-img" style="background-image: url('jew.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
@@ -221,7 +221,7 @@
 
    <div class="foot-panel3"> 
 
-    <div class="logo" style="background-color: red;"></div> 
+    <div class="logo" img src="logo.png"></div> 
 
    </div> 
 
