--- a/index.html
+++ b/index.html
@@ -177,7 +177,62 @@
             <p>See more</p>
         </div>
     </div>
-    
+        <div class="box1 box">
+        <div class="box-content">
+            <h2>Clothes</h2>
+            <div class="box-img" style="background-image: url('box1.jpg');"></div>
+            <p>See more</p>
+        </div>
+    </div>
+    <div class="box2 box">
+        <div class="box-content">
+            <h2>Electronics</h2>
+            <div class="box-img" style="background-image: url('head.jpg');"></div>
+            <p>See more</p>
+        </div>
+    </div>
+    <div class="box3 box">
+        <div class="box-content">
+            <h2>Footwear</h2>
+            <div class="box-img" style="background-image: url('foot.jpg');"></div>
+            <p>See more</p>
+        </div>
+    </div>
+    <div class="box4 box">
+        <div class="box-content">
+            <h2>Skin-Care</h2>
+            <div class="box-img" style="background-image: url('skin.jpg');"></div>
+            <p>See more</p>
+        </div>
+    </div>
+    <div class="box5 box">
+        <div class="box-content">
+            <h2>Make-Up</h2>
+            <div class="box-img" style="background-image: url('box5.jpg');"></div>
+            <p>See more</p>
+        </div>
+    </div>
+    <div class="box6 box">
+        <div class="box-content">
+            <h2>Fitness</h2>
+            <div class="box-img" style="background-image: url('fit.jpg');"></div>
+            <p>See more</p>
+        </div>
+    </div>
+    <div class="box7 box">
+        <div class="box-content">
+            <h2>Electronics</h2>
+            <div class="box-img" style="background-image: url('box7.jpg');"></div>
+            <p>See more</p>
+        </div>
+    </div>
+    <div class="box8 box">
+        <div class="box-content">
+            <h2>Jewelry</h2>
+            <div class="box-img" style="background-image: url('jew.jpg');"></div>
+            <p>See more</p>
+        </div>
+     </div>
     
 </div>
   
