--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
     </div>
     <div class="box5 box">
         <div class="box-content">
-            <h2>Make-Up</h2>
+            <h2>Beauty Products</h2>
             <div class="box-img" style="background-image: url('box5.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box6 box">
         <div class="box-content">
-            <h2>Fitness</h2>
+            <h2>Fitness Equipment</h2>
             <div class="box-img" style="background-image: url('fit.jpg');"></div>
             <p>See more</p>
         </div>
@@ -172,63 +172,63 @@
     </div>
     <div class="box8 box">
         <div class="box-content">
-            <h2>Jewelry</h2>
+            <h2>Jewellery Collection</h2>
             <div class="box-img" style="background-image: url('jew.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
         <div class="box1 box">
         <div class="box-content">
-            <h2>Clothes</h2>
+            <h2>Watches & Accessories</h2>
             <div class="box-img" style="background-image: url('box1.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box2 box">
         <div class="box-content">
-            <h2>Electronics</h2>
+            <h2>Baby Products</h2>
             <div class="box-img" style="background-image: url('head.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box3 box">
         <div class="box-content">
-            <h2>Footwear</h2>
+            <h2>Sports Gear</h2>
             <div class="box-img" style="background-image: url('foot.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box4 box">
         <div class="box-content">
-            <h2>Skin-Care</h2>
+            <h2>Musical Instruments</h2>
             <div class="box-img" style="background-image: url('skin.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box5 box">
         <div class="box-content">
-            <h2>Make-Up</h2>
+            <h2>Smart Appliances</h2>
             <div class="box-img" style="background-image: url('box5.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box6 box">
         <div class="box-content">
-            <h2>Fitness</h2>
+            <h2>Men’s Fashion</h2>
             <div class="box-img" style="background-image: url('fit.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box7 box">
         <div class="box-content">
-            <h2>Electronics</h2>
+            <h2>Women’s Fashion</h2>
             <div class="box-img" style="background-image: url('box7.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box8 box">
         <div class="box-content">
-            <h2>Jewelry</h2>
+            <h2>Smart Devices</h2>
             <div class="box-img" style="background-image: url('jew.jpg');"></div>
             <p>See more</p>
         </div>
@@ -237,56 +237,56 @@
 
        <div class="box1 box">
         <div class="box-content">
-            <h2>Clothes</h2>
+            <h2>Home Essentials</h2>
             <div class="box-img" style="background-image: url('box1.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box2 box">
         <div class="box-content">
-            <h2>Electronics</h2>
+            <h2>Grocery Items</h2>
             <div class="box-img" style="background-image: url('head.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box3 box">
         <div class="box-content">
-            <h2>Footwear</h2>
+            <h2>Pet Supplies</h2>
             <div class="box-img" style="background-image: url('foot.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box4 box">
         <div class="box-content">
-            <h2>Skin-Care</h2>
+            <h2>Handmade Goods</h2>
             <div class="box-img" style="background-image: url('skin.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box5 box">
         <div class="box-content">
-            <h2>Make-Up</h2>
+            <h2>Office Supplies</h2>
             <div class="box-img" style="background-image: url('box5.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box6 box">
         <div class="box-content">
-            <h2>Fitness</h2>
+            <h2>Books Collection</h2>
             <div class="box-img" style="background-image: url('fit.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box7 box">
         <div class="box-content">
-            <h2>Electronics</h2>
+            <h2>Travel Luggage</h2>
             <div class="box-img" style="background-image: url('box7.jpg');"></div>
             <p>See more</p>
         </div>
     </div>
     <div class="box8 box">
         <div class="box-content">
-            <h2>Jewelry</h2>
+            <h2>Scientific Tools</h2>
             <div class="box-img" style="background-image: url('jew.jpg');"></div>
             <p>See more</p>
         </div>
